--- a/css/style.css
+++ b/css/style.css
@@ -59,44 +59,39 @@ button {
 }
 
 
-
-.view {
+x-view {
   background: #f8f8f8;
-
-  /* Stretch both vertically/horizontally */
-  top: 0; right: 0; bottom: 0; left: 0;
-
-  position: fixed;
-  overflow: hidden;
 }
-.view > header {
+x-view > header {
+  background: #00A8EA;
+  border-bottom: 4px solid #e9e9e9;
+  color: #f8f8f8;
+}
+/*.view > header {
   background: #00A8EA;
   border-bottom: 4px solid #e9e9e9;
   color: #f8f8f8;
   position: relative;
   margin: 0;
   text-align: center;
-}
-.view > header > h1 {
+}*/
+x-view > header > h1 {
+  font-size: 2rem;
   padding: .1rem 0 .3rem 0;
   margin: 0;
 }
-.view > header > button {
+x-view > header > button {
   background: none;
   border: none;
   color: #fff;
 }
-.view > header > button.left {
+x-view > header > button.left {
   padding: 0.3rem .8rem;
   position: absolute;
   left: 0;
   top: 0;
 }
-.view > .view-content {
-  position: absolute;
-  top: 3.5rem; left: 0; right: 0; bottom: 0;
-  overflow-x: hidden;
-}
+
 
 .list > .listitem {
   cursor: pointer;
@@ -123,7 +118,7 @@ button {
 
 
 
-.slide-left-in {
+/*.slide-left-in {
   animation-name: slide-left-in;
   animation-duration: .6s;
   transform: translateX(0%);
@@ -142,3 +137,4 @@ button {
   0% { transform: translateX(0%); }
   100% { transform: translateX(-100%); }
 }
+*/
